# generate-fastapi

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  example.json  example2.sql  pylint.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  python-publish.yml
examples/: example.sql  example1.sql
src/fastapi_code_generator/: __init__.py  version.py
src/fastapi_code_generator/file_generators/: fastapi_generator.py
src/fastapi_code_generator/mako_templates/migrations/versions/added_routes/: upgrade.sql
src/fastapi_code_generator/mako_templates/src/project/: template_project_init.py
src/fastapi_code_generator/mako_templates/src/project/core/: service_factory.py
src/fastapi_code_generator/mako_templates/src/project/routers/: template_route.py
src/fastapi_code_generator/mako_templates/tests/: utils.py
src/fastapi_code_generator/mako_templates/tests/test_route/: __init__.py  test_basic_positive.py  test_invalid_input_negative.py  test_valid_input_negative.py
src/fastapi_code_generator/parsers/: json_parser.py  sql_parser.py
src/fastapi_code_generator/schemas/: baseschemas.py
src/fastapi_code_generator/templates/: template_Makefile  template_asgi.py  template_config_loader.py  template_conftest.py  template_db.py  template_model.py  template_project_init.py  template_queries.py  template_requirements_parser.py  template_route.py  template_schemas.py  template_services.py  template_setup.cfg  template_setup.py  template_test.py  template_test_crud.py  template_test_errors.py
src/fastapi_code_generator/templates/template_make/: ci.mk  clean.mk  common.mk  format.mk  install.mk  lint.mk  run.mk  test.mk
src/fastapi_code_generator/translators/: json_translator.py  sql_translator.py
src/generate_fastapi/: __init__.py
src/generate_fastapi/file_generators/: fastapi_generator.py
src/generate_fastapi/mako_templates/migrations/versions/added_routes/: downgrade.sql.mako  upgrade.sql
src/generate_fastapi/mako_templates/src/project/: template_project_init.py
src/generate_fastapi/mako_templates/tests/: conftest.py  utils.py.mako
src/generate_fastapi/mako_templates/tests/test_route/: __init__.py.mako  test_basic_positive.py.mako  test_invalid_input_negative.py.mako  test_valid_input_negative.py
src/generate_fastapi/parsers/: json_parser.py  sql_parser.py
src/generate_fastapi/translators/: json_translator.py  sql_translator.py
tests/: test_filegenerator.py  test_json_parser.py  test_parser.py  test_simple.py  test_sql_parser.py
(+12 files in other folders)
