[metadata]
name = fastapi_code_generator
url = https://github.com/nymann/fastapi-code-generator
license = GPL v3
maintainer = Kristian Nymann Jakobsen
maintainer_email = kristian@nymann.dev
description = REST API for fastapi_code_generator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.8
setup_requires=
    pytest-runner
tests_require=
    pytest
    pytest-cov
install_requires=
    sql_column_parser
    typer
    mako
    requests

[options.extras_require]
dev =
    wemake-python-styleguide
    mypy
    dlint
    nitpick
    cohesion
    pyformat

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fastapi_generate_code = fastapi_code_generator:entry_point


[flake8]
exclude = mako_templates
format = wemake
show-source = True
statistics = False
doctests = True

# Plugins:
max-complexity = 6
max-line-length = 80

# Self settings:
max-imports = 16


[tool:pytest]
testpaths = tests
addopts =
  --strict
  --doctest-modules
  --cov-branch
  --cov-report=term-missing:skip-covered
  --cov-report=html
  --cov-report=xml
  --cov-fail-under=100

[coverage:run]
branch = True
source =
    fastapi_code_generator
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest


[mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
allow_redefinition = False
check_untyped_defs = True
disallow_untyped_decorators = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True

[mypy-wemake_python_styleguide.compat.nodes]
# We allow explicit `Any` only in this file, because of the compatibility:
disallow_any_explicit = False

[mypy-wemake_python_styleguide.logic.safe_eval]
# We allow explicit `Any` only in this file, because that's what it does:
disallow_any_explicit = False

[doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path = docs/_build
max-line-length = 80
sphinx = True

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"
